2nd build jekyll-immages.

--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
 <meta property="twitter:title" content="David Blanco-Mulero" />
 <meta name="twitter:site" content="@" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","url":"/about/","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"/about/","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
