--- a/software/index.html
+++ b/software/index.html
@@ -33,7 +33,7 @@
 <meta property="twitter:title" content="David Blanco-Mulero" />
 <meta name="twitter:site" content="@" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","url":"/software/","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"/software/","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
