--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 <meta property="twitter:title" content="Error 404!" />
 <meta name="twitter:site" content="@" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Error 404!","description":"PhD Candidate Aalto University","url":"/404.html","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"/404.html","headline":"Error 404!","description":"PhD Candidate Aalto University","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
