--- a/publications/index.html
+++ b/publications/index.html
@@ -62,7 +62,46 @@
         <main>
             <article>
                 <h2 id="preprints">Preprints</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>ArXiv Preprint ArXiv:2106.15127</i>.</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="hietala2021closing">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2021). Closing the Sim2Real Gap in Dynamic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2109.04771</i>.</span></div>
+<button class="button0" onclick="toggleBibtexhietala2021closing()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2109.04771"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+<div id="ahietala2021closing" style="display: none;">
+<pre>@inproceedings{hietala2021closing,
+  title = {Closing the Sim2Real Gap in Dynamic Cloth Manipulation},
+  author = {Hietala, Julius and Blanco-Mulero, David and Alcan, Gokhan and Kyrki, Ville},
+  year = {2021},
+  eprint = {2109.04771},
+  booktitle = {arXiv preprint arXiv:2109.04771},
+  archiveprefix = {arXiv},
+  group = {preprint},
+  primaryclass = {cs.RO},
+  link = {https://arxiv.org/abs/2109.04771}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexhietala2021closing(parameter) {
+    var x= document.getElementById('ahietala2021closing');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li></ol>
+
+<h2 id="workshop-papers">Workshop papers</h2>
+<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
 <button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
  
 
@@ -77,16 +116,13 @@
     <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
 
 <div id="ablancomulero2021evolvinggraph" style="display: none;">
-<pre>@article{blancomulero2021evolvinggraph,
+<pre>@inproceedings{blancomulero2021evolvinggraph,
   title = {Evolving-Graph Gaussian Processes},
   author = {Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
   year = {2021},
-  journal = {arXiv preprint arXiv:2106.15127},
-  eprint = {2106.15127},
-  archiveprefix = {arXiv},
-  primaryclass = {cs.LG},
+  booktitle = {Time Series Workshop at 34th International Conference on Machine Learning.},
   link = {https://arxiv.org/abs/2106.15127},
-  group = {preprint},
+  group = {workshop},
   code = {https://github.com/dblanm/evolving-ggp}
 }
 </pre>
@@ -126,7 +162,6 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
   isbn = {9781450352802},
   publisher = {Association for Computing Machinery},
   address = {New York, NY, USA},
-  url = {https://doi.org/10.1145/3068796.3068800},
   doi = {10.1145/3068796.3068800},
   booktitle = {Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering},
   pages = {6–10},
@@ -198,7 +233,7 @@ function toggleBibtex2016_puma(parameter) {
             <small> &copy; David Blanco-Mulero 2021
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 01 July 2021
+                    Last updated on 16 September 2021
             </small>
           </p>
 
