--- a/index.html
+++ b/index.html
@@ -122,6 +122,43 @@ function toggleBibtexhietala2021closing(parameter) {
 }
 </script>
 </li>
+<li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2021). Manipulation of granular materials by learning particle interactions. <i>ArXiv Preprint ArXiv:2111.02274</i>.</span></div>
+<button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2111.02274"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+<div id="atuomainen2021manipulation" style="display: none;">
+<pre>@inproceedings{tuomainen2021manipulation,
+  title = {Manipulation of granular materials by learning particle interactions},
+  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
+  year = {2021},
+  booktitle = {arXiv preprint arXiv:2111.02274},
+  eprint = {2111.02274},
+  archiveprefix = {arXiv},
+  group = {preprint},
+  primaryclass = {cs.RO},
+  link = {https://arxiv.org/abs/2111.02274}
+}
+</pre>
+</div>
+<script>
+function toggleBibtextuomainen2021manipulation(parameter) {
+    var x= document.getElementById('atuomainen2021manipulation');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
 <li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
 <button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
  
@@ -162,6 +199,8 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 
 <h2 id="news">News</h2>
 
+<p><strong>03.11.2021</strong> - We just submitted our work on <a href="https://arxiv.org/abs/2111.02274">Manipulation of granular materials by learning particle interactions</a> to IEEE for possible publication.</p>
+
 <p><strong>10.09.2021</strong> - We just submitted our work on <a href="https://arxiv.org/abs/2109.04771">Closing the Sim2Real Gap in Dynamic Cloth Manipulation</a> to IEEE for possible publication.</p>
 
 <p><strong>24.07.2021</strong> - I had a really great time at the Time Series Workshop at ICML 2021! You can find the poster of my work <a href="https://dblanm.github.io/assets/images/eGGP_poster.png">here</a>.</p>
@@ -178,7 +217,7 @@ to the <a href="http://roseyu.com/time-series-workshop/">Time Series Workshop</a
             <small> &copy; David Blanco-Mulero 2021
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 16 September 2021
+                    Last updated on 04 November 2021
             </small>
           </p>
 
