--- a/publications/index.html
+++ b/publications/index.html
@@ -98,6 +98,43 @@ function toggleBibtexhietala2021closing(parameter) {
     }
 }
 </script>
+</li>
+<li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2021). Manipulation of granular materials by learning particle interactions. <i>ArXiv Preprint ArXiv:2111.02274</i>.</span></div>
+<button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2111.02274"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+<div id="atuomainen2021manipulation" style="display: none;">
+<pre>@inproceedings{tuomainen2021manipulation,
+  title = {Manipulation of granular materials by learning particle interactions},
+  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
+  year = {2021},
+  booktitle = {arXiv preprint arXiv:2111.02274},
+  eprint = {2111.02274},
+  archiveprefix = {arXiv},
+  group = {preprint},
+  primaryclass = {cs.RO},
+  link = {https://arxiv.org/abs/2111.02274}
+}
+</pre>
+</div>
+<script>
+function toggleBibtextuomainen2021manipulation(parameter) {
+    var x= document.getElementById('atuomainen2021manipulation');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
 </li></ol>
 
 <h2 id="workshop-papers">Workshop papers</h2>
@@ -233,7 +270,7 @@ function toggleBibtex2016_puma(parameter) {
             <small> &copy; David Blanco-Mulero 2021
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 16 September 2021
+                    Last updated on 04 November 2021
             </small>
           </p>
 
