--- a/about/index.html
+++ b/about/index.html
@@ -26,14 +26,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Candidate Aalto University" />
 <meta property="og:description" content="PhD Candidate Aalto University" />
-<link rel="canonical" href="/about/" />
-<meta property="og:url" content="/about/" />
+<link rel="canonical" href="http://localhost:4000/about/" />
+<meta property="og:url" content="http://localhost:4000/about/" />
 <meta property="og:site_name" content="David Blanco-Mulero" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="David Blanco-Mulero" />
 <meta name="twitter:site" content="@" />
+<meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"/about/","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"@type":"WebSite","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","url":"http://localhost:4000/about/","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -113,10 +114,10 @@ I started bouldering on 2019 and I’m currently targeting a 6-C.</p>
 
         <footer>
           <p class="copy">
-            <small> &copy; David Blanco-Mulero 2021
+            <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 04 November 2021
+                    Last updated on 09 February 2022
             </small>
           </p>
 
