--- a/software/index.html
+++ b/software/index.html
@@ -26,14 +26,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Candidate Aalto University" />
 <meta property="og:description" content="PhD Candidate Aalto University" />
-<link rel="canonical" href="/software/" />
-<meta property="og:url" content="/software/" />
+<link rel="canonical" href="http://localhost:4000/software/" />
+<meta property="og:url" content="http://localhost:4000/software/" />
 <meta property="og:site_name" content="David Blanco-Mulero" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="David Blanco-Mulero" />
 <meta name="twitter:site" content="@" />
+<meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"/software/","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","@context":"https://schema.org"}</script>
+{"@type":"WebPage","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","url":"http://localhost:4000/software/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -93,10 +94,10 @@
 
         <footer>
           <p class="copy">
-            <small> &copy; David Blanco-Mulero 2021
+            <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 04 November 2021
+                    Last updated on 09 February 2022
             </small>
           </p>
 
