--- a/404.html
+++ b/404.html
@@ -26,15 +26,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Candidate Aalto University" />
 <meta property="og:description" content="PhD Candidate Aalto University" />
-<link rel="canonical" href="http://localhost:4000/404.html" />
-<meta property="og:url" content="http://localhost:4000/404.html" />
+<link rel="canonical" href="/404.html" />
+<meta property="og:url" content="/404.html" />
 <meta property="og:site_name" content="David Blanco-Mulero" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Error 404!" />
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Error 404!","description":"PhD Candidate Aalto University","url":"http://localhost:4000/404.html","@context":"https://schema.org"}</script>
+{"@type":"WebPage","headline":"Error 404!","description":"PhD Candidate Aalto University","url":"/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
