--- a/projects/index.html
+++ b/projects/index.html
@@ -26,15 +26,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Candidate Aalto University" />
 <meta property="og:description" content="PhD Candidate Aalto University" />
-<link rel="canonical" href="http://localhost:4000/projects/" />
-<meta property="og:url" content="http://localhost:4000/projects/" />
+<link rel="canonical" href="/projects/" />
+<meta property="og:url" content="/projects/" />
 <meta property="og:site_name" content="David Blanco-Mulero" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="David Blanco-Mulero" />
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","url":"http://localhost:4000/projects/","@context":"https://schema.org"}</script>
+{"@type":"WebPage","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","url":"/projects/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
