--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","url":"/","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
