--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,7 @@
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"David Blanco-Mulero","description":"PhD Candidate Aalto University","url":"/projects/","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"/projects/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
