--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Error 404!","description":"PhD Candidate Aalto University","url":"/404.html","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"/404.html","description":"PhD Candidate Aalto University","headline":"Error 404!","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
