--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 
 <h2 id="news">News</h2>
 
+<p><strong>12.02.2022</strong> - Delighted to know that both MSc. students I supervised during their MSc. thesis, Neea Tuomainen “<a href="https://aaltodoc.aalto.fi/handle/123456789/112867">Using Graph Neural Networks to Simulate Manipulated Granular Material</a>”, and Julius Hietala “<a href="https://aaltodoc.aalto.fi/handle/123456789/112884">Dynamic Robotic Cloth Manipulation</a>”, sucessfully graduated.</p>
+
 <p><strong>03.11.2021</strong> - We just submitted our work on <a href="https://arxiv.org/abs/2111.02274">Manipulation of granular materials by learning particle interactions</a> to IEEE for possible publication.</p>
 
 <p><strong>10.09.2021</strong> - We just submitted our work on <a href="https://arxiv.org/abs/2109.04771">Closing the Sim2Real Gap in Dynamic Cloth Manipulation</a> to IEEE for possible publication.</p>
