--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement 
 
  
 
+
+
+
 <div id="ahietala2021closing" style="display: none;">
 <pre>@inproceedings{hietala2021closing,
   title = {Closing the Sim2Real Gap in Dynamic Cloth Manipulation},
@@ -123,8 +126,8 @@ function toggleBibtexhietala2021closing(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2021). Manipulation of granular materials by learning particle interactions. <i>ArXiv Preprint ArXiv:2111.02274</i>.</span></div>
-<button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
+<li><div class="text-justify"><span id="tuomainen2021manipulatioo">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2021). Manipulation of granular materials by learning particle interactions. <i>ArXiv Preprint ArXiv:2111.02274</i>.</span></div>
+<button class="button0" onclick="toggleBibtextuomainen2021manipulatioo()">Bibtex</button>
  
 
  
@@ -135,8 +138,11 @@ function toggleBibtexhietala2021closing(parameter) {
 
  
 
-<div id="atuomainen2021manipulation" style="display: none;">
-<pre>@inproceedings{tuomainen2021manipulation,
+
+
+
+<div id="atuomainen2021manipulatioo" style="display: none;">
+<pre>@inproceedings{tuomainen2021manipulatioo,
   title = {Manipulation of granular materials by learning particle interactions},
   author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
   year = {2021},
@@ -150,8 +156,8 @@ function toggleBibtexhietala2021closing(parameter) {
 </pre>
 </div>
 <script>
-function toggleBibtextuomainen2021manipulation(parameter) {
-    var x= document.getElementById('atuomainen2021manipulation');
+function toggleBibtextuomainen2021manipulatioo(parameter) {
+    var x= document.getElementById('atuomainen2021manipulatioo');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -173,6 +179,9 @@ function toggleBibtextuomainen2021manipulation(parameter) {
  
 
     <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
+
+
+
 
 <div id="ablancomulero2021evolvinggraph" style="display: none;">
 <pre>@inproceedings{blancomulero2021evolvinggraph,
@@ -200,9 +209,9 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 
 <h2 id="news">News</h2>
 
-<p><strong>12.02.2022</strong> - Delighted to know that both MSc. students I supervised during their MSc. thesis, Neea Tuomainen “<a href="https://aaltodoc.aalto.fi/handle/123456789/112867">Using Graph Neural Networks to Simulate Manipulated Granular Material</a>”, and Julius Hietala “<a href="https://aaltodoc.aalto.fi/handle/123456789/112884">Dynamic Robotic Cloth Manipulation</a>”, sucessfully graduated.</p>
+<p><strong>28.03.2022</strong> - Our work <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert">Manipulation of granular materials by learning particle interactions</a> has been published at IEEE Robotics and Automation Letters. You can also find videos of the experimental results in the <a href="https://sites.google.com/view/granular-gnn-manipulation">project website</a>.</p>
 
-<p><strong>03.11.2021</strong> - We just submitted our work on <a href="https://arxiv.org/abs/2111.02274">Manipulation of granular materials by learning particle interactions</a> to IEEE for possible publication.</p>
+<p><strong>12.02.2022</strong> - Delighted to know that both MSc. students I supervised during their MSc. thesis, Neea Tuomainen “<a href="https://aaltodoc.aalto.fi/handle/123456789/112867">Using Graph Neural Networks to Simulate Manipulated Granular Material</a>”, and Julius Hietala “<a href="https://aaltodoc.aalto.fi/handle/123456789/112884">Dynamic Robotic Cloth Manipulation</a>”, sucessfully graduated.</p>
 
 <p><strong>10.09.2021</strong> - We just submitted our work on <a href="https://arxiv.org/abs/2109.04771">Closing the Sim2Real Gap in Dynamic Cloth Manipulation</a> to IEEE for possible publication.</p>
 
@@ -220,7 +229,7 @@ to the <a href="http://roseyu.com/time-series-workshop/">Time Series Workshop</a
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 13 February 2022
+                    Last updated on 28 March 2022
             </small>
           </p>
 
