--- a/publications/index.html
+++ b/publications/index.html
@@ -62,7 +62,55 @@
     <body>
         <main>
             <article>
-                <h2 id="preprints">Preprints</h2>
+                <h2 id="journal-papers">Journal papers</h2>
+<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
+<button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
+ 
+
+    <a href="http://doi.org/10.1109/LRA.2022.3158382"><input class="button" type="button" value="doi" /></a>
+
+ 
+
+ 
+
+    <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/granular-gnn-manipulation"><input class="button3" type="button" value="code" /></a>
+
+
+<div id="atuomainen2021manipulation" style="display: none;">
+<pre>@article{tuomainen2021manipulation,
+  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
+  journal = {IEEE Robotics and Automation Letters},
+  title = {Manipulation of Granular Materials by Learning Particle Interactions},
+  year = {2022},
+  volume = {7},
+  number = {2},
+  pages = {5663-5670},
+  doi = {10.1109/LRA.2022.3158382},
+  link = {https://ieeexplore.ieee.org/document/9732690?source=authoralert},
+  group = {journal},
+  website = {https://sites.google.com/view/granular-gnn-manipulation}
+}
+</pre>
+</div>
+<script>
+function toggleBibtextuomainen2021manipulation(parameter) {
+    var x= document.getElementById('atuomainen2021manipulation');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li></ol>
+
+<h2 id="preprints">Preprints</h2>
 <ol class="bibliography"><li><div class="text-justify"><span id="hietala2021closing">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2021). Closing the Sim2Real Gap in Dynamic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2109.04771</i>.</span></div>
 <button class="button0" onclick="toggleBibtexhietala2021closing()">Bibtex</button>
  
@@ -74,6 +122,9 @@
     <a href="https://arxiv.org/abs/2109.04771"><input class="button4" type="button" value="link" /></a>
 
  
+
+
+
 
 <div id="ahietala2021closing" style="display: none;">
 <pre>@inproceedings{hietala2021closing,
@@ -100,8 +151,8 @@ function toggleBibtexhietala2021closing(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2021). Manipulation of granular materials by learning particle interactions. <i>ArXiv Preprint ArXiv:2111.02274</i>.</span></div>
-<button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
+<li><div class="text-justify"><span id="tuomainen2021manipulatioo">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2021). Manipulation of granular materials by learning particle interactions. <i>ArXiv Preprint ArXiv:2111.02274</i>.</span></div>
+<button class="button0" onclick="toggleBibtextuomainen2021manipulatioo()">Bibtex</button>
  
 
  
@@ -112,8 +163,11 @@ function toggleBibtexhietala2021closing(parameter) {
 
  
 
-<div id="atuomainen2021manipulation" style="display: none;">
-<pre>@inproceedings{tuomainen2021manipulation,
+
+
+
+<div id="atuomainen2021manipulatioo" style="display: none;">
+<pre>@inproceedings{tuomainen2021manipulatioo,
   title = {Manipulation of granular materials by learning particle interactions},
   author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
   year = {2021},
@@ -127,8 +181,8 @@ function toggleBibtexhietala2021closing(parameter) {
 </pre>
 </div>
 <script>
-function toggleBibtextuomainen2021manipulation(parameter) {
-    var x= document.getElementById('atuomainen2021manipulation');
+function toggleBibtextuomainen2021manipulatioo(parameter) {
+    var x= document.getElementById('atuomainen2021manipulatioo');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -152,6 +206,9 @@ function toggleBibtextuomainen2021manipulation(parameter) {
  
 
     <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
+
+
+
 
 <div id="ablancomulero2021evolvinggraph" style="display: none;">
 <pre>@inproceedings{blancomulero2021evolvinggraph,
@@ -182,7 +239,7 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 <button class="button0" onclick="toggleBibtex2017_collision_avoidance()">Bibtex</button>
  
 
-    <a href="http://doi.org/10.1145/3068796.3068800"><input class="button1" type="button" value="doi" /></a>
+    <a href="http://doi.org/10.1145/3068796.3068800"><input class="button" type="button" value="doi" /></a>
 
  
 
@@ -191,6 +248,9 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
     <a href="https://doi.org/10.1145/3068796.3068800"><input class="button4" type="button" value="link" /></a>
 
  
+
+
+
 
 <div id="a2017_collision_avoidance" style="display: none;">
 <pre>@inproceedings{2017_collision_avoidance,
@@ -235,6 +295,9 @@ function toggleBibtex2017_collision_avoidance(parameter) {
 
  
 
+
+
+
 <div id="a2016_puma" style="display: none;">
 <pre>@inproceedings{2016_puma,
   title = {Cascade Control of the PUMA 560 Motors using Simulink and Arduino},
@@ -271,7 +334,7 @@ function toggleBibtex2016_puma(parameter) {
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 13 February 2022
+                    Last updated on 28 March 2022
             </small>
           </p>
 
