--- a/publications/index.html
+++ b/publications/index.html
@@ -63,7 +63,7 @@
         <main>
             <article>
                 <h2 id="journal-papers">Journal papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., &amp; and Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
 <button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
  
 
@@ -79,12 +79,12 @@
 
 
 
-    <a href="https://sites.google.com/view/granular-gnn-manipulation"><input class="button3" type="button" value="code" /></a>
+    <a href="https://sites.google.com/view/granular-gnn-manipulation"><input class="button3" type="button" value="website" /></a>
 
 
 <div id="atuomainen2021manipulation" style="display: none;">
 <pre>@article{tuomainen2021manipulation,
-  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
+  author = {Tuomainen, Neea and and Kyrki, Ville},
   journal = {IEEE Robotics and Automation Letters},
   title = {Manipulation of Granular Materials by Learning Particle Interactions},
   year = {2022},
@@ -150,46 +150,6 @@ function toggleBibtexhietala2021closing(parameter) {
     }
 }
 </script>
-</li>
-<li><div class="text-justify"><span id="tuomainen2021manipulatioo">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2021). Manipulation of granular materials by learning particle interactions. <i>ArXiv Preprint ArXiv:2111.02274</i>.</span></div>
-<button class="button0" onclick="toggleBibtextuomainen2021manipulatioo()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2111.02274"><input class="button4" type="button" value="link" /></a>
-
- 
-
-
-
-
-<div id="atuomainen2021manipulatioo" style="display: none;">
-<pre>@inproceedings{tuomainen2021manipulatioo,
-  title = {Manipulation of granular materials by learning particle interactions},
-  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
-  year = {2021},
-  booktitle = {arXiv preprint arXiv:2111.02274},
-  eprint = {2111.02274},
-  archiveprefix = {arXiv},
-  group = {preprint},
-  primaryclass = {cs.RO},
-  link = {https://arxiv.org/abs/2111.02274}
-}
-</pre>
-</div>
-<script>
-function toggleBibtextuomainen2021manipulatioo(parameter) {
-    var x= document.getElementById('atuomainen2021manipulatioo');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
 </li></ol>
 
 <h2 id="workshop-papers">Workshop papers</h2>
@@ -235,7 +195,7 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 </li></ol>
 
 <h2 id="conference-papers">Conference papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="2017_collision_avoidance">Di Castro, M., <b>Mulero, D. B.</b>, Ferre, M., &amp; Masi, A. (2017). A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation. <i>Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering</i>, 6–10. https://doi.org/10.1145/3068796.3068800</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="2017_collision_avoidance">Di Castro, M., <b>Blanco-Mulero, D.</b>, Ferre, M., &amp; Masi, A. (2017). A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation. <i>Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering</i>, 6–10. https://doi.org/10.1145/3068796.3068800</span></div>
 <button class="button0" onclick="toggleBibtex2017_collision_avoidance()">Bibtex</button>
  
 
@@ -254,7 +214,7 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 
 <div id="a2017_collision_avoidance" style="display: none;">
 <pre>@inproceedings{2017_collision_avoidance,
-  author = {Di Castro, Mario and Mulero, David Blanco and Ferre, Manuel and Masi, Alessandro},
+  author = {Di Castro, Mario and Blanco-Mulero, David and Ferre, Manuel and Masi, Alessandro},
   title = {A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation},
   year = {2017},
   isbn = {9781450352802},
@@ -283,7 +243,7 @@ function toggleBibtex2017_collision_avoidance(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="2016_puma"><b>Blanco, D.</b>, Alonso, S., &amp; Domínguez, M. (2016). Cascade Control of the PUMA 560 Motors using Simulink and Arduino. In R. E. Fernandez &amp; H. Montes (Eds.), <i>Robocity16 Open Conference on Future Trends in Robotics</i> (Vol. 1, pp. 349–356).</span></div>
+<li><div class="text-justify"><span id="2016_puma"><b>Blanco-Mulero, D.</b>, Alonso, S., &amp; Domínguez, M. (2016). Cascade Control of the PUMA 560 Motors using Simulink and Arduino. In R. E. Fernandez &amp; H. Montes (Eds.), <i>Robocity16 Open Conference on Future Trends in Robotics</i> (Vol. 1, pp. 349–356).</span></div>
 <button class="button0" onclick="toggleBibtex2016_puma()">Bibtex</button>
  
 
@@ -302,7 +262,7 @@ function toggleBibtex2017_collision_avoidance(parameter) {
 <pre>@inproceedings{2016_puma,
   title = {Cascade Control of the PUMA 560 Motors using Simulink and Arduino},
   keywords = {robotics control, cascade control, Arduino},
-  author = {Blanco, David and Alonso, Seraf{\'i}n and Dom{\'i}nguez, Manuel},
+  author = {Blanco-Mulero, David and Alonso, Seraf{\'i}n and Dom{\'i}nguez, Manuel},
   year = {2016},
   volume = {1},
   pages = {349--356},
