--- a/index.html
+++ b/index.html
@@ -86,6 +86,52 @@ supervised by Prof. Ville Kyrki.</p>
 the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
 
 <h2 id="selected-publications">Selected Publications</h2>
+<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., &amp; and Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
+<button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
+ 
+
+    <a href="http://doi.org/10.1109/LRA.2022.3158382"><input class="button" type="button" value="doi" /></a>
+
+ 
+
+ 
+
+    <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+    <a href="https://sites.google.com/view/granular-gnn-manipulation"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="atuomainen2021manipulation" style="display: none;">
+<pre>@article{tuomainen2021manipulation,
+  author = {Tuomainen, Neea and and Kyrki, Ville},
+  journal = {IEEE Robotics and Automation Letters},
+  title = {Manipulation of Granular Materials by Learning Particle Interactions},
+  year = {2022},
+  volume = {7},
+  number = {2},
+  pages = {5663-5670},
+  doi = {10.1109/LRA.2022.3158382},
+  link = {https://ieeexplore.ieee.org/document/9732690?source=authoralert},
+  group = {journal},
+  website = {https://sites.google.com/view/granular-gnn-manipulation}
+}
+</pre>
+</div>
+<script>
+function toggleBibtextuomainen2021manipulation(parameter) {
+    var x= document.getElementById('atuomainen2021manipulation');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li></ol>
 <ol class="bibliography"><li><div class="text-justify"><span id="hietala2021closing">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2021). Closing the Sim2Real Gap in Dynamic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2109.04771</i>.</span></div>
 <button class="button0" onclick="toggleBibtexhietala2021closing()">Bibtex</button>
  
