Fix publicaiton name.

--- a/publications/index.html
+++ b/publications/index.html
@@ -63,7 +63,7 @@
         <main>
             <article>
                 <h2 id="journal-papers">Journal papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., &amp; and Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
 <button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
  
 
@@ -84,7 +84,7 @@
 
 <div id="atuomainen2021manipulation" style="display: none;">
 <pre>@article{tuomainen2021manipulation,
-  author = {Tuomainen, Neea and and Kyrki, Ville},
+  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
   journal = {IEEE Robotics and Automation Letters},
   title = {Manipulation of Granular Materials by Learning Particle Interactions},
   year = {2022},
