--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ supervised by Prof. Ville Kyrki.</p>
 the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement Learning course</a> at Aalto University.</p>
 
 <h2 id="selected-publications">Selected Publications</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., &amp; and Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
 <button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
  
 
@@ -107,7 +107,7 @@ the <a href="https://mycourses.aalto.fi/course/view.php?id=28593">Reinforcement 
 
 <div id="atuomainen2021manipulation" style="display: none;">
 <pre>@article{tuomainen2021manipulation,
-  author = {Tuomainen, Neea and and Kyrki, Ville},
+  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
   journal = {IEEE Robotics and Automation Letters},
   title = {Manipulation of Granular Materials by Learning Particle Interactions},
   year = {2022},
