Update news and site

--- a/software/index.html
+++ b/software/index.html
@@ -26,15 +26,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Candidate Aalto University" />
 <meta property="og:description" content="PhD Candidate Aalto University" />
-<link rel="canonical" href="https://dblanm.github.io//software/" />
-<meta property="og:url" content="https://dblanm.github.io//software/" />
+<link rel="canonical" href="http://localhost:4000/software/" />
+<meta property="og:url" content="http://localhost:4000/software/" />
 <meta property="og:site_name" content="David Blanco-Mulero" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="David Blanco-Mulero" />
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"https://dblanm.github.io//software/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/software/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -64,9 +64,22 @@
             <article>
                 <h1 id="software">Software</h1>
 
+<h3 id="manipulation-of-granular-materials-by-learning-particle-interactions"><a href="https://github.com/dblanm/gnn-manip">Manipulation of granular materials by learning particle interactions</a></h3>
+
+<p>Implementation of our paper <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert">Manipulation of granular materials by learning particle interactions</a>.</p>
+
+<figure class="image">
+  <div style="text-align:  ">
+  <img src="../assets/images/GNN_manip.png" alt="" width="250px" />
+  <figcaption></figcaption>
+  </div>
+</figure>
+
+<p><br /></p>
+
 <h3 id="evolving-graph-gaussian-process"><a href="https://github.com/dblanm/evolving-ggp">Evolving-Graph Gaussian Process</a></h3>
 
-<p>Implementation of our paper <a href="">Evolving-Graph Gaussian Processes</a>.</p>
+<p>Implementation of our paper <a href="https://arxiv.org/abs/2106.15127">Evolving-Graph Gaussian Processes</a>.</p>
 
 <figure class="image">
   <div style="text-align:  ">
@@ -97,7 +110,7 @@
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 28 March 2022
+                    Last updated on 03 August 2022
             </small>
           </p>
 
