--- a/about/index.html
+++ b/about/index.html
@@ -26,15 +26,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Candidate Aalto University" />
 <meta property="og:description" content="PhD Candidate Aalto University" />
-<link rel="canonical" href="https://dblanm.github.io//about/" />
-<meta property="og:url" content="https://dblanm.github.io//about/" />
+<link rel="canonical" href="http://localhost:4000/about/" />
+<meta property="og:url" content="http://localhost:4000/about/" />
 <meta property="og:site_name" content="David Blanco-Mulero" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="David Blanco-Mulero" />
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"https://dblanm.github.io//about/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"http://localhost:4000/about/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","name":"David Blanco-Mulero","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -117,7 +117,7 @@ I started bouldering on 2019 and I’m currently targeting a 6-C.</p>
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 28 March 2022
+                    Last updated on 03 August 2022
             </small>
           </p>
 
