--- a/publications/index.html
+++ b/publications/index.html
@@ -26,15 +26,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Candidate Aalto University" />
 <meta property="og:description" content="PhD Candidate Aalto University" />
-<link rel="canonical" href="https://dblanm.github.io//publications/" />
-<meta property="og:url" content="https://dblanm.github.io//publications/" />
+<link rel="canonical" href="http://localhost:4000/publications/" />
+<meta property="og:url" content="http://localhost:4000/publications/" />
 <meta property="og:site_name" content="David Blanco-Mulero" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="David Blanco-Mulero" />
 <meta name="twitter:site" content="@" />
 <meta name="google-site-verification" content="cWSHYmtS45ljgJyi8XZwksEgyKBNktqtDtWoj8s2hXs" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"https://dblanm.github.io//publications/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/publications/","description":"PhD Candidate Aalto University","headline":"David Blanco-Mulero","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
@@ -77,6 +77,8 @@
 
  
 
+    <a href="https://github.com/dblanm/gnn-manip"><input class="button3" type="button" value="code" /></a>
+
 
 
     <a href="https://sites.google.com/view/granular-gnn-manipulation"><input class="button3" type="button" value="website" /></a>
@@ -94,55 +96,14 @@
   doi = {10.1109/LRA.2022.3158382},
   link = {https://ieeexplore.ieee.org/document/9732690?source=authoralert},
   group = {journal},
-  website = {https://sites.google.com/view/granular-gnn-manipulation}
+  website = {https://sites.google.com/view/granular-gnn-manipulation},
+  code = {https://github.com/dblanm/gnn-manip}
 }
 </pre>
 </div>
 <script>
 function toggleBibtextuomainen2021manipulation(parameter) {
     var x= document.getElementById('atuomainen2021manipulation');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li></ol>
-
-<h2 id="preprints">Preprints</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="hietala2021closing">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2021). Closing the Sim2Real Gap in Dynamic Cloth Manipulation. <i>ArXiv Preprint ArXiv:2109.04771</i>.</span></div>
-<button class="button0" onclick="toggleBibtexhietala2021closing()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2109.04771"><input class="button4" type="button" value="link" /></a>
-
- 
-
-
-
-
-<div id="ahietala2021closing" style="display: none;">
-<pre>@inproceedings{hietala2021closing,
-  title = {Closing the Sim2Real Gap in Dynamic Cloth Manipulation},
-  author = {Hietala, Julius and Blanco-Mulero, David and Alcan, Gokhan and Kyrki, Ville},
-  year = {2021},
-  eprint = {2109.04771},
-  booktitle = {arXiv preprint arXiv:2109.04771},
-  archiveprefix = {arXiv},
-  group = {preprint},
-  primaryclass = {cs.RO},
-  link = {https://arxiv.org/abs/2109.04771}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexhietala2021closing(parameter) {
-    var x= document.getElementById('ahietala2021closing');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -195,7 +156,50 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
 </li></ol>
 
 <h2 id="conference-papers">Conference papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="2017_collision_avoidance">Di Castro, M., <b>Blanco-Mulero, D.</b>, Ferre, M., &amp; Masi, A. (2017). A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation. <i>Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering</i>, 6–10. https://doi.org/10.1145/3068796.3068800</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="hietala2022closing">Hietala, J., <b>Blanco-Mulero, D.</b>, Alcan, G., &amp; Kyrki, V. (2022). Learning Visual Feedback Control for Dynamic Cloth Folding. <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>.</span></div>
+<button class="button0" onclick="toggleBibtexhietala2022closing()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2109.04771"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+    <a href="https://github.com/hietalajulius/dynamic-cloth-folding"><input class="button3" type="button" value="code" /></a>
+
+
+
+    <a href="https://sites.google.com/view/dynamic-cloth-folding/home"><input class="button3" type="button" value="website" /></a>
+
+
+<div id="ahietala2022closing" style="display: none;">
+<pre>@inproceedings{hietala2022closing,
+  title = {Learning Visual Feedback Control for Dynamic Cloth Folding},
+  author = {Hietala, Julius and Blanco-Mulero, David and Alcan, Gokhan and Kyrki, Ville},
+  booktitle = {IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year = {2022},
+  link = {https://arxiv.org/abs/2109.04771},
+  group = {conference},
+  website = {https://sites.google.com/view/dynamic-cloth-folding/home},
+  code = {https://github.com/hietalajulius/dynamic-cloth-folding}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexhietala2022closing(parameter) {
+    var x= document.getElementById('ahietala2022closing');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li>
+<li><div class="text-justify"><span id="2017_collision_avoidance">Di Castro, M., <b>Blanco-Mulero, D.</b>, Ferre, M., &amp; Masi, A. (2017). A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation. <i>Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering</i>, 6–10. https://doi.org/10.1145/3068796.3068800</span></div>
 <button class="button0" onclick="toggleBibtex2017_collision_avoidance()">Bibtex</button>
  
 
@@ -294,7 +298,7 @@ function toggleBibtex2016_puma(parameter) {
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 28 March 2022
+                    Last updated on 03 August 2022
             </small>
           </p>
 
