Page update October 2022.

--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
     <body>
         <main>
             <article>
-                <p>My name is David Blanco Mulero and I’m a 3rd year Phd Student 
+                <p>My name is David Blanco Mulero and I’m a 4th year Phd Student 
 at Aalto University <a href="https://irobotics.aalto.fi/">Intelligent Robotics group</a>.</p>
 
 <p>I received my MSc in Automation and Robotics at the Universidad Politecnica de Madrid (Spain).
@@ -117,7 +117,7 @@ I started bouldering on 2019 and I’m currently targeting a 6-C.</p>
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 03 August 2022
+                    Last updated on 31 October 2022
             </small>
           </p>
 
