--- a/publications/index.html
+++ b/publications/index.html
@@ -63,7 +63,7 @@
         <main>
             <article>
                 <h2 id="journal-papers">Journal papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
+<ol class="bibliography"><li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen*, N., <b>Blanco-Mulero*, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
 <button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
  
 
@@ -86,7 +86,7 @@
 
 <div id="atuomainen2021manipulation" style="display: none;">
 <pre>@article{tuomainen2021manipulation,
-  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
+  author = {Tuomainen*, Neea and Blanco-Mulero*, David and Kyrki, Ville},
   journal = {IEEE Robotics and Automation Letters},
   title = {Manipulation of Granular Materials by Learning Particle Interactions},
   year = {2022},
@@ -104,48 +104,6 @@
 <script>
 function toggleBibtextuomainen2021manipulation(parameter) {
     var x= document.getElementById('atuomainen2021manipulation');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}
-</script>
-</li></ol>
-
-<h2 id="workshop-papers">Workshop papers</h2>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
-<button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
- 
-
- 
-
- 
-
-    <a href="https://arxiv.org/abs/2106.15127"><input class="button4" type="button" value="link" /></a>
-
- 
-
-    <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
-
-
-
-
-<div id="ablancomulero2021evolvinggraph" style="display: none;">
-<pre>@inproceedings{blancomulero2021evolvinggraph,
-  title = {Evolving-Graph Gaussian Processes},
-  author = {Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
-  year = {2021},
-  booktitle = {Time Series Workshop at 34th International Conference on Machine Learning.},
-  link = {https://arxiv.org/abs/2106.15127},
-  group = {workshop},
-  code = {https://github.com/dblanm/evolving-ggp}
-}
-</pre>
-</div>
-<script>
-function toggleBibtexblancomulero2021evolvinggraph(parameter) {
-    var x= document.getElementById('ablancomulero2021evolvinggraph');
     if (x.style.display === 'none') {
         x.style.display = 'block';
     } else {
@@ -290,6 +248,90 @@ function toggleBibtex2016_puma(parameter) {
 </script>
 </li></ol>
 
+<h2 id="workshop-papers">Workshop papers</h2>
+<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
+<button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2106.15127"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+    <a href="https://github.com/dblanm/evolving-ggp"><input class="button3" type="button" value="code" /></a>
+
+
+
+
+<div id="ablancomulero2021evolvinggraph" style="display: none;">
+<pre>@inproceedings{blancomulero2021evolvinggraph,
+  title = {Evolving-Graph Gaussian Processes},
+  author = {Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
+  year = {2021},
+  booktitle = {Time Series Workshop at 34th International Conference on Machine Learning.},
+  link = {https://arxiv.org/abs/2106.15127},
+  group = {workshop},
+  code = {https://github.com/dblanm/evolving-ggp}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexblancomulero2021evolvinggraph(parameter) {
+    var x= document.getElementById('ablancomulero2021evolvinggraph');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li></ol>
+
+<h2 id="preprints">Preprints</h2>
+<ol class="bibliography"><li><div class="text-justify"><span id="rajani2022coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>ArXiv Preprint ArXiv:2209.01207</i>.</span></div>
+<button class="button0" onclick="toggleBibtexrajani2022coimitation()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+
+<div id="arajani2022coimitation" style="display: none;">
+<pre>@article{rajani2022coimitation,
+  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  year = {2022},
+  journal = {arXiv preprint arXiv:2209.01207},
+  eprint = {2209.01207},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.LG},
+  link = {https://arxiv.org/abs/2209.01207},
+  group = {preprint}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexrajani2022coimitation(parameter) {
+    var x= document.getElementById('arajani2022coimitation');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
+</li></ol>
+
             </article>
         </main>
 
@@ -298,7 +340,7 @@ function toggleBibtex2016_puma(parameter) {
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 03 August 2022
+                    Last updated on 31 October 2022
             </small>
           </p>
 
