--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 <p>Hi there! I’m David Blanco Mulero, PhD Candidate at Aalto University <a href="https://irobotics.aalto.fi/">Intelligent Robotics group</a>
 supervised by Prof. Ville Kyrki.</p>
 
-<p>My research focuses on data-efficient learning and robotic manipulation.</p>
+<p>My research focuses on deformable object manipulation and learning representation for manipulation.</p>
 
 <p><br /></p>
 
 <h2 id="research-interests">Research interests</h2>
 <ul>
+  <li><strong>Manipulation</strong>. Robotic manipulation of deformable objects.</li>
   <li><strong>Geometric deep learning</strong>. Relational inductive-bias models such as <em>Graph Neural Networks</em> or <em>Graph Gaussian Processes</em>.</li>
   <li><strong>Gaussian processes</strong>. Probabilistic models on structured domains. Learning data-efficient surrogate models for control.</li>
-  <li><strong>Manipulation</strong>. Robotic manipulation of deformable objects.</li>
 </ul>
 
 <p>I am also a Teaching Assistant for
@@ -129,7 +129,7 @@ function toggleBibtexhietala2022closing(parameter) {
 }
 </script>
 </li>
-<li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen, N., <b>Blanco-Mulero, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
+<li><div class="text-justify"><span id="tuomainen2021manipulation">Tuomainen*, N., <b>Blanco-Mulero*, D.</b>, &amp; Kyrki, V. (2022). Manipulation of Granular Materials by Learning Particle Interactions. <i>IEEE Robotics and Automation Letters</i>, <i>7</i>(2), 5663–5670. https://doi.org/10.1109/LRA.2022.3158382</span></div>
 <button class="button0" onclick="toggleBibtextuomainen2021manipulation()">Bibtex</button>
  
 
@@ -152,7 +152,7 @@ function toggleBibtexhietala2022closing(parameter) {
 
 <div id="atuomainen2021manipulation" style="display: none;">
 <pre>@article{tuomainen2021manipulation,
-  author = {Tuomainen, Neea and Blanco-Mulero, David and Kyrki, Ville},
+  author = {Tuomainen*, Neea and Blanco-Mulero*, David and Kyrki, Ville},
   journal = {IEEE Robotics and Automation Letters},
   title = {Manipulation of Granular Materials by Learning Particle Interactions},
   year = {2022},
@@ -177,8 +177,8 @@ function toggleBibtextuomainen2021manipulation(parameter) {
     }
 }
 </script>
-</li></ol>
-<ol class="bibliography"><li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
+</li>
+<li><div class="text-justify"><span id="blancomulero2021evolvinggraph"><b>Blanco-Mulero, D.</b>, Heinonen, M., &amp; Kyrki, V. (2021). Evolving-Graph Gaussian Processes. <i>Time Series Workshop at 34th International Conference on Machine Learning.</i></span></div>
 <button class="button0" onclick="toggleBibtexblancomulero2021evolvinggraph()">Bibtex</button>
  
 
@@ -217,9 +217,51 @@ function toggleBibtexblancomulero2021evolvinggraph(parameter) {
     }
 }
 </script>
+</li>
+<li><div class="text-justify"><span id="rajani2022coimitation">Rajani, C., Arndt, K., <b>Blanco-Mulero, D.</b>, Luck, K. S., &amp; Kyrki, V. (2022). Co-Imitation: Learning Design and Behaviour by Imitation. <i>ArXiv Preprint ArXiv:2209.01207</i>.</span></div>
+<button class="button0" onclick="toggleBibtexrajani2022coimitation()">Bibtex</button>
+ 
+
+ 
+
+ 
+
+    <a href="https://arxiv.org/abs/2209.01207"><input class="button4" type="button" value="link" /></a>
+
+ 
+
+
+
+
+<div id="arajani2022coimitation" style="display: none;">
+<pre>@article{rajani2022coimitation,
+  title = {Co-Imitation: Learning Design and Behaviour by Imitation},
+  author = {Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+  year = {2022},
+  journal = {arXiv preprint arXiv:2209.01207},
+  eprint = {2209.01207},
+  archiveprefix = {arXiv},
+  primaryclass = {cs.LG},
+  link = {https://arxiv.org/abs/2209.01207},
+  group = {preprint}
+}
+</pre>
+</div>
+<script>
+function toggleBibtexrajani2022coimitation(parameter) {
+    var x= document.getElementById('arajani2022coimitation');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}
+</script>
 </li></ol>
 
 <h2 id="news">News</h2>
+<p><strong>26.10.2022</strong> - I presented our work “<a href="https://arxiv.org/abs/2109.04771">Learning Visual Feedback Control for Dynamic Cloth Folding</a>” at IROS 2022, which was a finalist for the IROS Best RoboCup Paper, IROS ABB Best Student Paper and IROS Best Paper awards!</p>
+
 <p><strong>03.08.2022</strong> - We just released the <a href="https://github.com/dblanm/gnn-manip">code</a> for our work <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert">Manipulation of granular materials by learning particle interactions</a>.</p>
 
 <p><strong>01.08.2022</strong> - Our work <a href="https://arxiv.org/abs/2109.04771">Learning Visual Feedback Control for Dynamic Cloth Folding</a> was accepted to IROS 2022, check the <a href="https://sites.google.com/view/dynamic-cloth-folding/home">project website</a> for more information!</p>
@@ -246,7 +288,7 @@ to the <a href="http://roseyu.com/time-series-workshop/">Time Series Workshop</a
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 03 August 2022
+                    Last updated on 31 October 2022
             </small>
           </p>
 
