--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@ function toggleBibtexrajani2022coimitation(parameter) {
 </li></ol>
 
 <h2 id="news">News</h2>
-<p><strong>26.10.2022</strong> - I presented our work “<a href="https://arxiv.org/abs/2109.04771">Learning Visual Feedback Control for Dynamic Cloth Folding</a>” at IROS 2022, which was a finalist for the IROS Best RoboCup Paper, IROS ABB Best Student Paper and IROS Best Paper awards!</p>
+<p><strong>20.11.2022</strong> - Our work <a href="https://arxiv.org/abs/2209.01207">Co-Imitation: Learning Design and Behaviour by Imitation</a> has been accepted at AAAI 2023 as well as the NeurIPS <a href="https://sites.google.com/view/deep-rl-workshop-neurips-2022">DeepRL Workshop 2022</a>!</p>
+
+<p><strong>26.10.2022</strong> - I presented our work “<a href="https://arxiv.org/abs/2109.04771">Learning Visual Feedback Control for Dynamic Cloth Folding</a>” at IROS 2022, which was a finalist for the IROS Best RoboCup Paper, IROS ABB Best Student Paper and IROS Best Paper awards! Check the <a href="https://sites.google.com/view/dynamic-cloth-folding/home">project website</a> for more information.</p>
 
 <p><strong>03.08.2022</strong> - We just released the <a href="https://github.com/dblanm/gnn-manip">code</a> for our work <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert">Manipulation of granular materials by learning particle interactions</a>.</p>
-
-<p><strong>01.08.2022</strong> - Our work <a href="https://arxiv.org/abs/2109.04771">Learning Visual Feedback Control for Dynamic Cloth Folding</a> was accepted to IROS 2022, check the <a href="https://sites.google.com/view/dynamic-cloth-folding/home">project website</a> for more information!</p>
 
 <p><strong>04.05.2022</strong> - I will be doing a research visit to the <a href="https://www.iri.upc.edu/">Institut de Robotica i Informatica Industrial IRI-CSIC-UPC</a> from September to end of December!</p>
 
@@ -272,7 +272,7 @@ function toggleBibtexrajani2022coimitation(parameter) {
 
 <p><strong>28.03.2022</strong> - Our work <a href="https://ieeexplore.ieee.org/document/9732690?source=authoralert">Manipulation of granular materials by learning particle interactions</a> has been published at IEEE Robotics and Automation Letters. You can also find videos of the experimental results in the <a href="https://sites.google.com/view/granular-gnn-manipulation">project website</a>.</p>
 
-<p><strong>12.02.2022</strong> - Delighted to know that both MSc. students I supervised during their MSc. thesis, Neea Tuomainen “<a href="https://aaltodoc.aalto.fi/handle/123456789/112867">Using Graph Neural Networks to Simulate Manipulated Granular Material</a>”, and Julius Hietala “<a href="https://aaltodoc.aalto.fi/handle/123456789/112884">Dynamic Robotic Cloth Manipulation</a>”, sucessfully graduated.</p>
+<p>[//]: # (<strong>12.02.2022</strong> - Delighted to know that both MSc. students I supervised during their MSc. thesis, Neea Tuomainen “[Using Graph Neural Networks to Simulate Manipulated Granular Material](https://aaltodoc.aalto.fi/handle/123456789/112867)”, and Julius Hietala “[Dynamic Robotic Cloth Manipulation](https://aaltodoc.aalto.fi/handle/123456789/112884)”, sucessfully graduated.)</p>
 
 <p><strong>24.07.2021</strong> - I had a really great time at the Time Series Workshop at ICML 2021! You can find the poster of my work <a href="https://dblanm.github.io/assets/images/eGGP_poster.png">here</a>.</p>
 
@@ -288,7 +288,7 @@ to the <a href="http://roseyu.com/time-series-workshop/">Time Series Workshop</a
             <small> &copy; David Blanco-Mulero 2022
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 31 October 2022
+                    Last updated on 22 November 2022
             </small>
           </p>
 
