Update refs, about and intro.

--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,6 @@
         <div class="links scroll">
         <a href="/">Home</a>
         <a href="/publications/">Publications</a>
-        <a href="/blog/">Blog</a>
         <a href="/software/">Software</a>
         <a href="/about/">About Me</a>
 
@@ -98,12 +97,12 @@ The project goal is to mimic the natural spider pultrusion process
 via robotic micro-manipulation and reinforcement learning.</p>
 
 <p>On my free time, aside of electronic and ML projects, I really enjoy bouldering.
-I started bouldering on 2019 and I’m currently targeting a 6-C.</p>
+I started bouldering on 2019 and sport climbing on 2022.</p>
 
-<p>Here a photo of one of my 6-A successes :)</p>
+<p>Here a photo of one of my 6-C successes :)</p>
 <figure class="image">
   <div style="text-align: center ">
-  <img src="../assets/images/bouldering.jpeg" alt="" width="300px" />
+  <img src="../assets/images/bouldering_2022.jpg" alt="" width="300px" />
   <figcaption></figcaption>
   </div>
 </figure>
@@ -114,10 +113,10 @@ I started bouldering on 2019 and I’m currently targeting a 6-C.</p>
 
         <footer>
           <p class="copy">
-            <small> &copy; David Blanco-Mulero 2022
+            <small> &copy; David Blanco-Mulero 2023
                     | Powered by Jekyll and
                     <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on 22 November 2022
+                    Last updated on 06 March 2023
             </small>
           </p>
 
